centered login form and added grayness behind it

--- a/webroot/css/styles.css
+++ b/webroot/css/styles.css
@@ -123,9 +123,15 @@ form label {
 }
 
 .login {
+	position: fixed;
+	bottom: 50%;
+	left: 50%;
+	margin-left: -90px;
+	margin-bottom: -90px;
+	height: 180px;
 	width: 180px;
 	font-size: 11px;
-
+	z-index: 40;
 }
 
 .login input {
